Removing preview and release flags